# rox

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
crates/rox/: Cargo.toml  build.rs
crates/rox-dock/: Cargo.toml
crates/rox-dock/src/: dock.rs  history.rs  invalid_panel.rs  lib.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tiles.rs
crates/rox-dock/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/rox-dock/src/tab/: tab.rs  tab_bar.rs
crates/rox-dock/tests/fixtures/: layout.json
crates/rox-library/: Cargo.toml
crates/rox-library/src/: art.rs  hash.rs  lib.rs  listens.rs  lyrics.rs  m3u.rs  migrate.rs  open_files.rs  playlists.rs  projection.rs  rating.rs  scanner.rs  store.rs  tag_source.rs  thumbs.rs  writer.rs
crates/rox-playback/: Cargo.toml
crates/rox-playback-proto/: Cargo.toml
crates/rox-playback-proto/src/: main.rs  output.rs  resample.rs
crates/rox-playback/examples/: peaks_timing.rs
crates/rox-playback/src/: engine.rs  lib.rs  output.rs  resample.rs  shared.rs
crates/rox-prototype-library/: Cargo.toml
crates/rox-prototype-library/src/: gen.rs  lib.rs  main.rs  store.rs
crates/rox-prototype-playback/: Cargo.toml
crates/rox-prototype-playback/src/: engine.rs  lib.rs  main.rs  shared.rs
crates/rox-prototype-tray/: Cargo.toml
crates/rox-prototype-tray/src/: main.rs
crates/rox-prototype-viz/: Cargo.toml
crates/rox-prototype-viz/src/: lib.rs  main.rs  noise.rs  sim.rs  view.rs
crates/rox-viz/: Cargo.toml
crates/rox-viz-proto/: Cargo.toml
crates/rox-viz-proto/src/: main.rs  sim.rs
crates/rox-viz/src/: analysis.rs  feed.rs  lib.rs
crates/rox/assets/app/: Info.plist  rox.desktop  rox.icns
crates/rox/assets/workspaces/: Foobar.json  Llama.json  Metro.json  NekoRoX.json  Phosphor.json  README.md
crates/rox/src/: artists.rs  assets.rs  backdrop.rs  catalog.rs  charts.rs  composite.rs  cover_editor.rs  cover_match.rs  duplicates.rs  group_head.rs  history.rs  icon_packs.rs  lastfm.rs  layouts.rs  library.rs  library_watch.rs  lyrics_edit.rs  m3u.rs  main.rs  matching.rs  media_controls.rs  open_files.rs  palette.rs  panel.rs  panel_catalog.rs  panel_settings.rs  peaks.rs  playback.rs  player.rs  playlist_create.rs  quick_play.rs  rating_ui.rs  search.rs  selection.rs  settings.rs  settings_ui.rs  settings_window.rs  shared_query.rs  source.rs  spectrum.rs  (+13 more)
crates/rox/src/cover/: editor.rs  matcher.rs  mod.rs
crates/rox/src/design/: mod.rs  palette.rs  tokens.rs
crates/rox/src/integrations/: library_watch.rs  media_controls.rs  mod.rs  tray.rs
crates/rox/src/lastfm/: keys.rs
crates/rox/src/lyrics/: edit.rs  matcher.rs  mod.rs
crates/rox/src/panel/: gesture.rs  tracked_load.rs
crates/rox/src/panels/: art.rs  biography.rs  cover.rs  depth.rs  drag_anchor.rs  filter.rs  folder_tree.rs  grid.rs  group.rs  history.rs  library.rs  lyrics.rs  menu.rs  metadata.rs  mini.rs  mod.rs  playlists.rs  queue.rs  queue_widget.rs  search.rs  slide.rs  spectrum.rs  transport.rs  waveform.rs  window_controls.rs
crates/rox/src/providers/: deezer.rs  itunes.rs  lastfm.rs  lrclib.rs  mod.rs  musicbrainz.rs  theaudiodb.rs
crates/rox/src/query/: mod.rs  shared_query.rs
crates/rox/src/settings/: layouts.rs  window.rs
crates/rox/src/settings/window/: workspace_page.rs
crates/rox/src/settings_window/: workspace_page.rs
crates/rox/src/startup/: about_window.rs  icon_packs.rs  mod.rs  updates.rs  welcome_window.rs
crates/rox/src/tags/: editor.rs  guess.rs  matcher.rs  mod.rs  repair.rs
crates/rox/src/track_ui/: mod.rs  track_cells.rs  track_columns.rs  track_drag.rs
crates/rox/src/workspace/: menubar.rs
docs/: OPEN-QUESTIONS.md  README.md
docs/01-product/: 01-vision.md  02-experience.md  03-scope.md
docs/02-architecture/: 01-overview.md  02-components.md  03-non-functional.md
docs/02-architecture/decisions/: 01-adr-gpui.md  02-adr-audio-stack.md  03-adr-gapless.md  04-adr-tagging.md  05-adr-library-store.md  06-adr-search.md  07-adr-panels.md  08-adr-visualizer-rendering.md  09-adr-audio-output.md  10-adr-theming.md  11-adr-play-history.md  12-adr-design-tokens.md  13-adr-panel-theming.md  14-adr-online-providers.md  15-adr-global-filter.md  16-adr-play-queue.md  17-adr-queue-continuation.md  17-adr-tag-editor.md  18-adr-tag-editor.md
docs/03-implementation/: 01-playback.md  02-library.md  05-visualizer.md  06-panels.md  README.md
docs/0R-research/: 01-generative-visualizer.md  02-library-scale.md  03-quit-to-tray.md  README.md
patches/gpui/: expose-active-drag-type.patch  quit-keep-event-loop.patch  wayland-decoration-commit.patch  wayland-resize-geometry.patch
patches/gpui-component/: context-menu-dismiss.patch  submenu-parent-link.patch  table-row-height-rem.patch
scripts/: vendor-gpui.sh
