[workspace]
resolver = "2"
members = [
    "crates/rox",
    "crates/rox-dock",
    "crates/rox-playback",
    "crates/rox-library",
    "crates/rox-viz",
    "crates/rox-prototype-tray",
]
default-members = ["crates/rox"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"

# Our crates stay unoptimized for fast dev iteration, but dependencies build
# with full optimization: unoptimized Symphonia decodes an order of magnitude
# slower than optimized, which turned waveform peak generation into a ten
# second stall under `cargo run`. Deps only rebuild when they change, so this
# is a one-time compile cost.
[profile.dev.package."*"]
opt-level = 3

# The "*" override covers dependencies only, not workspace members, and
# rox-viz's FFT is a hot loop on the UI thread every pump tick - unoptimized
# it profiles an order of magnitude heavier than release, same story as
# Symphonia above.
[profile.dev.package.rox-viz]
opt-level = 3

# Debug symbols are a third of the binary (68 MB down to 54 MB) and release
# builds aren't what we debug with.
[profile.release]
strip = true

[workspace.dependencies]
# gpui is pre-1.0 with frequent breaking changes; pinned exactly per ADR 1.
# Upgrades are a budgeted task, bump this deliberately.
gpui = "=0.2.2"
# The dock and widget baseline per ADR 7. Also pre-1.0 and tracking gpui's
# churn, so pinned exactly and bumped together with gpui above. The assets
# crate bundles the icon SVGs the widgets reference.
gpui-component = "=0.5.1"
gpui-component-assets = "=0.5.1"

# The 0.2.2 crates.io source with two patches applied. One: the Linux and
# Windows backends no longer stop the event loop when the last window
# closes, which is what upstream's QuitMode work does (zed #42391) and what
# quit-to-tray needs. Two: the Wayland programmatic resize declares xdg
# window geometry in surface-local logical coordinates instead of a screen
# origin and device pixels, which collapsed the window to zero size on the
# next compositor move after a layout switch. vendor/gpui is generated, not
# checked in: scripts/vendor-gpui.sh (run by the nix shellHook) fetches the
# crate and applies patches/gpui/*.patch. Both are fixed on zed main (quit
# mode: zed #42391, resize geometry: zed #45153, merged 2025-12-17) but no
# crates.io release after 0.2.2 exists yet, so the first gpui bump should
# carry both and the patches go away with it.
#
# gpui-component gets the same treatment for one patch: its ContextMenuExt
# host (the right-click content menus) leans on the menu's own dismiss, which
# no-ops while a submenu is open, so an outside click can't close a content
# menu that has a submenu open. The patch adds a force-dismiss occluder,
# matching what rox-dock's tab_panel already does for the panel menu. Same
# vendor script, patches/gpui-component/*.patch. Drop it if upstream fixes the
# dismiss and the bump carries the fix.
[patch.crates-io]
gpui = { path = "vendor/gpui" }
gpui-component = { path = "vendor/gpui-component" }
