[package]
name = "rox-playback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cpal = "0.18"
# Decode per ADR 2: FLAC by default, MP3 pure-Rust behind symphonia's feature.
symphonia = { version = "0.6", default-features = false, features = ["flac", "mp3", "wav", "pcm"] }
# Wait-free SPSC ring for the RT boundary (ADR 3), both the sample ring and the PCM tap.
rtrb = "0.3"
