[package]
name = "rox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
rox-dock = { path = "../rox-dock" }
rox-library = { path = "../rox-library" }
rox-playback = { path = "../rox-playback" }
rox-viz = { path = "../rox-viz" }
# Platform data dir for the library database.
dirs = "5"
# The settings file; both already in the tree through gpui.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embeds our own icons over the gpui-component set; already in the tree
# through gpui-component-assets.
rust-embed = "8"
