[package]
name = "rox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
rox-dock = { path = "../rox-dock" }
rox-library = { path = "../rox-library" }
rox-playback = { path = "../rox-playback" }
rox-viz = { path = "../rox-viz" }
# Platform data dir for the library database.
dirs = "5"
# Decodes and blurs cover art into the baked backdrop; already in the tree
# through gpui, same version.
image = "0.25"
# The settings file; both already in the tree through gpui.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embeds our own icons over the gpui-component set; already in the tree
# through gpui-component-assets.
rust-embed = "8"
# Last.fm scrobbling: blocking calls to the audioscrobbler API from
# background threads, and the md5 its request signatures require.
ureq = "2"
md5 = "0.7"
# The tag editor's field suggestions ride the input widget's completion
# menu, whose provider trait speaks these types; both already in the tree
# through gpui-component.
lsp-types = "0.97"
anyhow = "1"
