[package]
name = "rox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
rox-dock = { path = "../rox-dock" }
rox-library = { path = "../rox-library" }
rox-playback = { path = "../rox-playback" }
rox-viz = { path = "../rox-viz" }
# Platform data dir for the library database.
dirs = "5"
# Decodes and blurs cover art into the baked backdrop; already in the tree
# through gpui, same version.
image = "0.25"
# The settings file; both already in the tree through gpui.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embeds our own icons over the gpui-component set; already in the tree
# through gpui-component-assets.
rust-embed = "8"
# Last.fm scrobbling: blocking calls to the audioscrobbler API from
# background threads, and the md5 its request signatures require.
ureq = "2"
md5 = "0.7"
# The tag editor's field suggestions ride the input widget's completion
# menu, whose provider trait speaks these types; both already in the tree
# through gpui-component.
lsp-types = "0.97"
anyhow = "1"
# OS media controls: MPRIS on Linux, SMTC on Windows, the remote command
# center on macOS. Answers the hardware media keys and shows the now-playing
# track in the desktop's media widget. The zbus backend is pure Rust, so a
# build needs no system libdbus.
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
# Carries media-key events from souvlaki's callback thread to the UI without a
# poll; already in the tree through gpui, same 2.x line.
async-channel = "2"
# Filesystem watching for the library roots: notify is the cross-platform
# layer, the debouncer coalesces a bulk copy's burst into batches and folds a
# directory deletion into one remove instead of a flood.
notify-debouncer-full = "0.7"
# The duplicates window's delete: files go to the OS trash, never unlinked,
# so a wrong pick comes back.
trash = "5"
# Builds the file:// URL for the now-playing cover souvlaki hands the OS
# transport; percent-encodes the path so spaces and unicode survive. Already
# in the tree, same 2.x line.
url = "2"

# The quit-to-tray icon: StatusNotifierItem over D-Bus, pure Rust on the
# same zbus 5 line souvlaki brought in. Runtime-agnostic via async-io
# instead of the default tokio; blocking gives the thread-and-handle API.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.6", default-features = false, features = ["blocking", "async-io"] }

# The Win32 HWND souvlaki's SMTC backend binds to, pulled off the gpui window.
# Already in the tree through gpui, same 0.6 line.
[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"

# Embeds assets/app/rox.ico into the exe as the application icon.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
